--- a/kreator.html
+++ b/kreator.html
@@ -87,6 +87,11 @@
       <i class="fas fa-barcode"></i>
       <span class="sidebar-label">Kod EAN</span>
     </div>
+    <div class="sidebar-item" title="Kod QR">
+  <i class="fas fa-qrcode"></i>
+  <span class="sidebar-label">Kod QR</span>
+</div>
+
     <div class="sidebar-item" title="Cena">
       <i class="fas fa-euro-sign"></i>
       <span class="sidebar-label">Cena</span>
@@ -223,6 +228,9 @@
 <!-- JsBarcode -->
 <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+
+
 <!-- ONNX Runtime -->
 <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
 
@@ -329,6 +337,7 @@ console.log("🔥 Firebase + Firestore poprawnie zainicjalizowane!");
 <script src="okladka.js"></script>
 <script src="dodajstrone.js"></script>
 <script src="eangenerator.js"></script>
+<script src="qrcodegenerator.js"></script>
 <script src="rysowanie.js"></script>
 
 
